deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eink-server
  namespace: eink
spec:
  type: ClusterIP
  selector:
    app: eink-server
  ports:
    - name: http
      port: 80
      targetPort: http
